frontend/src/scss/PrimeStyles.scss
.prime-home {
  background-color: color("base-lightest");
  padding-top: units(2);
}

.prime-container {
  width: 100%;
  margin-bottom: 1.5rem;

  .usa-card__header {
    padding: units(3);
    border-bottom: 1px solid color("base-lighter");
    display: flex;
    justify-content: space-between;

    h2 {
      margin: 0;
    }
  }

  .usa-card__header > :last-child,
  .usa-card__body > :last-child {
    &.usa-button {
      padding: 12px 20px;
      margin-right: 0;
    }
  }

  .usa-card__body {
    .usa-form-group {
      margin-left: 0;
      padding: 0;
    }
  }
}

.prime-ul {
  list-style-type: none;
  padding: 0;

  p {
    margin-bottom: 0;
    margin-top: units(1);
  }
}

.prime-right-align {
  float: right;
}

.prime-center {
  text-align: center;
}

.prime-search-input {
  margin-bottom: units(1);
  width: 100%;

  @include at-media("mobile-lg") {
    max-width: 22em;
  }
}

.prime-search-container {
  margin-bottom: units(1);
}

// patient in the queue

.prime-test {
  &-result {
    padding: 0 1em;

    @include at-media("desktop") {
      border-left: 1px solid color($theme-color-prime-gray-light);
    }

    @include at-media("tablet") {
      border-left: 1px solid color($theme-color-prime-gray-light);
    }

    &-submit {
      margin-top: 1em;
      margin-bottom: 1em;

      @include at-media("desktop") {
        margin-top: 0;
      }

      .usa-button {
        width: 100%;
        margin-top: 0.5rem;
      }
    }
  }

  &-name {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    border-bottom: 1px solid color($theme-color-prime-gray-light);

    > button {
      margin-top: 0.5rem;
    }

    @include at-media("desktop") {
      flex-direction: row;

      > button {
        margin-top: 0;
      }
    }

    @include at-media("tablet") {
      flex-direction: row;

      > button {
        margin-top: 0;
      }
    }
  }

  &-body {
    padding-left: 1rem;

    .prime-li {
      > button {
        font-weight: 700;
      }
    }

    .usa-form-group {
      margin-top: 0;

      .usa-label,
      .usa-legend {
        font-weight: 700;
      }
    }

    .checkboxes {
      @include at-media("desktop") {
        margin-top: 1rem;
      }

      @include at-media("tablet") {
        margin-top: 1rem;
      }
    }

    .usa-select {
      min-width: 197px;
    }

    .test-information-ul {
      display: flex;
      flex-flow: wrap;
      flex-direction: column;
      align-items: flex-start;
      width: 100%;

      @include at-media("desktop") {
        flex-direction: row;
        width: unset;
      }

      @include at-media("tablet") {
        flex-direction: row;
        width: unset;
      }

      .prime-li {
        width: 100%;

        @include at-media("desktop") {
          width: unset;
        }

        @include at-media("tablet") {
          width: unset;
        }
      }
    }
  }
}

.queue-item__description {
  .prime-li:not(:first-child) {
    margin-top: units(2);

    @include at-media("tablet") {
      margin-top: 0;
    }
  }
}

.queue-item__form--open {
  @include at-media("tablet") {
    align-items: flex-end;
  }
}

.testdate-checkbox {
  .checkboxes {
    @include at-media("desktop") {
      margin-top: 2.5rem;
    }
  }
}

.prime-queue-item {
  padding: 0;
  position: relative;

  .prime-card-container {
    border-left-width: 0.5em;
    border-left-style: solid;
    border-color: transparent;
  }

  .prime-test-name {
    margin-left: -0.5em;
  }

  .result-ready {
    font-weight: bold;
  }

  .usa-card__footer .usa-form label {
    margin-top: 0.5rem;
  }

  &__ready {
    border-color: color($theme-color-warning);

    .prime-test-name {
      margin-left: 0;
      padding-left: 1.5em;
    }

    .prime-card-container {
      border-color: color($theme-color-warning);
    }

    .timer-ready {
      background-color: color($theme-color-warning);
      color: color($theme-color-prime-gray-darkest);
      padding: units(1);

      .timer-overtime {
        color: color($theme-color-prime-gray-darkest);
      }
    }
  }

  &__completed {
    .timer-ready {
      background-color: color($theme-color-warning-lighter);
      color: color($theme-color-prime-gray-darkest);
      padding: units(1);

      .timer-overtime {
        color: color($theme-color-prime-gray-darkest);
      }
    }
  }
}

.prime-card-container {
  .usa-card__header {
    padding: units(2.5);
  }
}

.prime-container-padding {
  padding: 1rem;
}

.prime-previous-test-display {
  border-left: units(0.5) solid color("base-lighter");
  padding-left: units(1.5);
}

// close button

.prime-close-button {
  top: 1.5rem;
  right: 1.5rem;
  display: block;
  position: absolute;
  z-index: 10;
  border: none;
  background: transparent;
  cursor: pointer;

  @include at-media("desktop") {
    top: -0.5rem;
    right: -0.25rem;
  }

  @include at-media("tablet") {
    top: -0.5rem;
    right: -0.25rem;
  }
}

// other buttons
.sr-active-button {
  background-color: color($theme-color-primary-darker);
  color: #fff;
}

.prime-red-icon {
  color: color($theme-color-secondary);
}

// General group of related items on a form
.sr-section {
  border: 1px solid #ccc;
  padding: 1em;

  > h3 {
    font-size: 2rem;
    color: $theme-color-primary;
  }
}

$results-dropdown-spacing: #{units(4)} - #{units(2)} - 22px - #{units(4)}; // height of search bar, padding, gov banner, bottom spacing
/* ... */

